force-app/main/default/objects/Contact/fields/Reservation_Status__c.field-meta.xml
<CustomField>
    <fullName>Reservation_Status__c</fullName>
    <label>Reservation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Proposal Ready</fullName>
            </value>
            <value>
                <fullName>Contracted</fullName>
            </value>
            <value>
                <fullName>Scheduled</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>