force-app/main/default/objects/Contact/fields/TestCheckboxField__c.field-meta.xml
<CustomField>
    <fullName>TestCheckboxField__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Test Checkbox Field</label>
    <type>Checkbox</type>
</CustomField>